# knosh

./: Cargo.toml  README.md
examples/: 01-hello-world.ket  02-args.ket
src/: builtins.rs  error.rs  executor.rs  main.rs  util.rs
src/builtins/: interp.rs  mod.rs  pipe.rs  proc.rs  subinterp.rs  trap.rs
src/tui/: accept.rs  accepter.rs  complete.rs  completer.rs  context.rs  mod.rs
