[package]
name = "knosh"
version = "0.1.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
dirs = "1.0"
glob = "0.2"
ketos_derive = "0.10.0"
linefeed = "0.5.4"
nix = "0.13.0"
signal-hook = "0.1.8"

[dependencies.ketos]
git = "https://github.com/ysimonson/ketos"
branch = "knosh"
